Added support for field mappings Removed extraneous (empty) @API paths Fixed/baselined unit tests Cleaned up styles (CSS) Fixed primeng style issue

--- a/FrontEnd/src/app/resources/map-view/map-view.component.html
+++ b/FrontEnd/src/app/resources/map-view/map-view.component.html
@@ -1,16 +1,16 @@
 <loadingIndicator [done]="fieldMappings">
   <table class="table table-striped table-sm">
     <thead>
-      <th class="d-inline-block col-4">Discovery Field</th>
-      <th class="d-inline-block col-4">Data Source</th>
-      <th class="d-inline-block col-4">Source Value</th>
+      <th class="d-inline-block col-4">Discovery field</th>
+      <th class="d-inline-block col-4">Data source</th>
+      <th class="d-inline-block col-4">Source value</th>
     </thead>
     <tbody>
       <tr *ngFor="let fieldMap of fieldMappings">
         <td class="d-inline-block col-4">{{fieldMap.resourceField}}</td>
         <td class="d-inline-block col-4">
           <span *ngIf="fieldMap.sourceLocation">{{fieldMap.sourceLocation}}</span>
-          <span *ngIf="fieldMap.sourceFileName">{{getFilename(fieldMap.sourceFileName)}} [{{fieldMap.sourceFileRow}}, {{fieldMap.sourceFileColumn}}]</span>
+          <span *ngIf="fieldMap.sourceFileName" ngbTooltip="{{fieldMap.sourceFileName}}">{{getFilename(fieldMap.sourceFileName)}} [Col:{{fieldMap.sourceFileColumn}}, Row:{{fieldMap.sourceFileRow}}]</span>
         </td>
         <td class="d-inline-block col-4">{{fieldMap.value}}</td>
       </tr>
