--- a/FrontEnd/src/styles.css
+++ b/FrontEnd/src/styles.css
@@ -1,7 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~font-awesome/css/font-awesome.css";
+@import "~angular-tree-component/dist/angular-tree-component.css";
+@import "~primeng/resources/themes/omega/theme.css";
+@import "~primeng/resources/primeng.min.css";
 
-@import "assets/css/index.css";
+@import "assets/css/ng2-toastr.min.css";
 
 .logo-image {
   height: 50px;
